Persist patient symptoms in medical records

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -329,6 +329,7 @@
         cpf: cpf.value,
         data_consulta: dataC.value,
         diagnostico: diagnosticoFinal,
+        sintomas: sintomas.value || '',
         anamnese: anamnese.value || '',
         exames_solicitados: examesSolicitados
       };
