Expand diagnosis preview in record list

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -642,8 +642,8 @@
       border-radius: 10px;
       border: 1px solid var(--border);
       padding: 12px;
-      max-height: 200px;
-      overflow: auto;
+      max-height: none;
+      overflow: visible;
       white-space: pre-wrap;
     }
 
